--- a/deployment.yaml
+++ b/deployment.yaml
@@ -19,6 +19,6 @@ spec:
       containers:
       - name: nginx-container
         # Run this image
-        image: jayanthpodila/food:myimage
+        image: jayanthpodila/ecomm:v1
         ports:
         - containerPort: 80
